--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 
 services:
   app:
-    image: shadowreaver/crypto-signal:master
+    image: dev/crypto-signals:latest
     volumes:
-      # - ./config.yml:/app/config.yml
+      - ./app:/app
+      - ./app/config.yml:/app/config.yml
